# Feistel-rs

./: .gitignore  Cargo.toml  README.md
src/: feistel.rs
