[package]
name = "feistel_rs"
version = "0.1.0"
authors = ["alexeyan <alexander.druffel@googlemail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/feistel.rs"

[dependencies]
sha3 = "0.8.2"
rand = "0.7.3"
pretty-hex = "0.1.1"
cipher = "0.1.1"